# youtube-factory-pipeline

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
src/youtube_factory/: __init__.py  config.py  freellmapi.py  generate_readme.py  guide_deploy.py  json_utils.py  llm.py  logging_utils.py  orchestrator.py  playlists.py  prompts.py  scheduler.py  seo.py  shortio.py  shorts.py  video_providers.py
src/youtube_factory/agents/: __init__.py  agent_research.py  agent_script_builder.py  agent_video_analysis.py  agent_visual.py  agent_voice.py  analytics.py  assembly.py  audio.py  comments.py  community.py  guide.py  idea.py  orchestrator.py  prompts.py  research.py  scraper.py  script.py  script_builder.py  self_critique.py  shorts.py  uploader.py  video_analysis.py  visuals.py  voice.py
src/youtube_factory/providers/: __init__.py  base.py  kling.py  veo.py
src/youtube_factory_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: script.js
